c2rust-transpile/tests/snapshots/snapshots__transpile-linux@dummy.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/platform-specific/dummy.rs
input_file: c2rust-transpile/tests/snapshots/platform-specific/dummy.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
use core::ffi;
