c2rust-transpile/tests/snapshots/snapshots__transpile-macos@macros.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/macros.macos.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/macros.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
extern "C" {
    fn __error() -> *mut std::ffi::c_int;
    fn memcpy(
        __dst: *mut std::ffi::c_void,
        __src: *const std::ffi::c_void,
        __n: size_t,
    ) -> *mut std::ffi::c_void;
}
pub type __darwin_size_t = usize;
pub type size_t = __darwin_size_t;
#[no_mangle]
pub unsafe extern "C" fn errno_is_error() -> bool {
    return *__error() != 0 as std::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn size_of_const() -> std::ffi::c_int {
    let mut a: [std::ffi::c_int; 10] = [0; 10];
    return SIZE as std::ffi::c_int;    
}
pub const SIZE: usize = unsafe { ::core::mem::size_of::<[std::ffi::c_int; 10]>() };
#[no_mangle]
pub unsafe extern "C" fn memcpy_str_literal(mut out: *mut std::ffi::c_char) {
    memcpy(
        out as *mut std::ffi::c_void,
        b"\"]\0" as *const u8 as *const std::ffi::c_char as *const std::ffi::c_void,
        (::core::mem::size_of::<[std::ffi::c_char; 3]>() as size_t)
            .wrapping_div(::core::mem::size_of::<std::ffi::c_char>() as size_t)
            .wrapping_sub(1 as size_t)
            .wrapping_add(1 as size_t)
            .wrapping_mul(::core::mem::size_of::<std::ffi::c_char>() as size_t),
    );
}
