c2rust-transpile/tests/snapshots/snapshots__transpile-macos@types.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/types.macos.rs
input_file: c2rust-transpile/tests/snapshots/os-specific/types.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
use core::ffi;
pub type __darwin_ptrdiff_t = isize;
pub type __darwin_size_t = usize;
pub type __darwin_ssize_t = isize;
pub type int8_t = i8;
pub type int16_t = i16;
pub type int32_t = i32;
pub type int64_t = i64;
pub type intptr_t = isize;
pub type uintptr_t = usize;
pub type size_t = __darwin_size_t;
pub type uint8_t = u8;
pub type uint16_t = u16;
pub type uint32_t = u32;
pub type uint64_t = u64;
pub type intmax_t = libc::intmax_t;
pub type uintmax_t = libc::uintmax_t;
pub type ptrdiff_t = __darwin_ptrdiff_t;
pub type ssize_t = __darwin_ssize_t;
#[unsafe(no_mangle)]
pub static mut intvar: std::ffi::c_int = 0 as std::ffi::c_int;
#[unsafe(no_mangle)]
pub static mut sizevar: size_t = 0 as size_t;
#[unsafe(no_mangle)]
pub static mut ssizevar: ssize_t = 0 as ssize_t;
#[unsafe(no_mangle)]
pub static mut intptrvar: intptr_t = 0 as intptr_t;
#[unsafe(no_mangle)]
pub static mut uintptrvar: uintptr_t = 0 as uintptr_t;
#[unsafe(no_mangle)]
pub static mut ptrdiffvar: ptrdiff_t = 0 as ptrdiff_t;
#[unsafe(no_mangle)]
pub static mut uint8var: uint8_t = 0 as uint8_t;
#[unsafe(no_mangle)]
pub static mut uint16var: uint16_t = 0 as uint16_t;
#[unsafe(no_mangle)]
pub static mut uint32var: uint32_t = 0 as uint32_t;
#[unsafe(no_mangle)]
pub static mut uint64var: uint64_t = 0 as uint64_t;
#[unsafe(no_mangle)]
pub static mut int8var: int8_t = 0 as int8_t;
#[unsafe(no_mangle)]
pub static mut int16var: int16_t = 0 as int16_t;
#[unsafe(no_mangle)]
pub static mut int32var: int32_t = 0 as int32_t;
#[unsafe(no_mangle)]
pub static mut int64var: int64_t = 0 as int64_t;
#[unsafe(no_mangle)]
pub static mut maxvar: intmax_t = 0 as intmax_t;
#[unsafe(no_mangle)]
pub static mut umaxvar: uintmax_t = 0 as uintmax_t;

