c2rust-transpile/tests/snapshots/snapshots__transpile@anonymous_enum_in_struct.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/anonymous_enum_in_struct.rs
input_file: c2rust-transpile/tests/snapshots/anonymous_enum_in_struct.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    path_statements,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut,
    unused_unsafe,
    unused_variables
)]
use core::ffi;
pub type C2RustUnnamed = ffi::c_uint;
pub const VALUE2: C2RustUnnamed = 1;
pub const VALUE1: C2RustUnnamed = 0;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn use_variant_of_anonymous_enum() {
    let mut value: ffi::c_int = VALUE2 as ffi::c_int;
}
